--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Muhammad Ali the Greatest" />
     <meta property="og:url" content="https://mynameisearth.github.io/tribute-page/" />
     <meta property="og:description" content="Who is Muhammad Ali ? Only heavy weight boxer to be...." />
-    <meta property="og:image" content="https://drive.google.com/file/d/1ts-n0d-qCAQPRsONRu-HFZ467U1nixpD/view" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/mynameisearth/tribute-page/main/Images/logo-github.jpeg" />
     <meta property="og:type" content="website" />
     <title>A Tribute Page to Muhammad Ali</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
