--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Who is Muhammad Ali ? Only heavy weight boxer to be...." />
     <meta property="og:image" content="https://raw.githubusercontent.com/mynameisearth/tribute-page/main/Images/logo-github.jpeg" />
     <meta property="og:type" content="website" />
-    <title>A Tribute Page to Muhammad Ali</title>
+    <title>Muhammad Ali top 10 greatest boxer of all time. is the best boxer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="icon" href="./Images/icon.jpg" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
